# wc

./: .gitignore  LICENSE  Makefile  README.md
c/: Makefile  main.c
crystal/: .gitignore  shard.yml
crystal/spec/: spec_helper.cr  wc_spec.cr
crystal/src/: wc.cr
go/: Makefile  counters.go  main.go  main_test.go  stats_counter.go
go-branchless/: Makefile  counters.go  counters_test.go  stats.go
go-branchless/cmd/wc/: main.go
go-routines/: go.mod  main.go  main_test.go
go-routines-branchless/: main.go
go/cmd/wc/: main.go
haskell/: Makefile  main.hs
julia/: wc-branchless-multi-func.jl  wc-branchless.jl  wc.jl
julia/src/: WordCounter.jl  wc.jl
nim/: Makefile  wc.nim
python/: Makefile  wc.py  word_count.py  word_count_test.py
rust/: Cargo.toml  Makefile
rust/src/: main.rs  word_count.rs
testdata/: nonbreakingspace.txt  utf16.txt
typescript/: .eslintrc.json  .prettierrc  package-lock.json  package.json  tsconfig.json  wc.ts
typescript/src/: wc.js  wc.ts
xojo/: App.xojo_code  OptionParserModule.xojo_code  WordCounter.xojo_code  wc.xojo_project
xojo-branchless/: App.xojo_code  WordCounter.xojo_code
xojo-branchless/WordCounter/: Stats.xojo_code
xojo-desktop/: Build Automation.xojo_code  Window1.xojo_window  WndMain.xojo_window  WordCount.xojo_project  WordCounter.xojo_code  WordCounterByBlocks.xojo_code  WordCounterByByte.xojo_code  WordCounterByMemoryBlock.xojo_code  WordCounterByMemoryBlockBranchless.xojo_code
zig/: Makefile  build.zig
zig/src/: main.zig  word_count.zig
