[package]
name = "wc"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Cowgar <jeremy@cowgar.com>", "Kem Tekinay <ktekinay@mactechnologies.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
workerpool = "1.2"

